--- a/frontend/app/components/home/home.html
+++ b/frontend/app/components/home/home.html
@@ -1,6 +1,5 @@
-<form name="form1" class="form-horizontal" ng-controller="HomeController as ctrl" ng-init="ctrl.init()" action="stat" type="get"> 
+<form name="form1" class="form-horizontal" ng-controller="HomeController as ctrl" ng-init="ctrl.init()"> 
     <input type="text" name="qid" style="display:none;" ng-model="ctrl.question.id">
-    <input type="text" name="cid" style="display:none;" ng-model="ctrl.ID">
 <div >     
 <div class="container">
     <div class="row jumbotron">
