--- a/frontend/app/components/stat/stat.html
+++ b/frontend/app/components/stat/stat.html
@@ -1,9 +1,11 @@
 
+
 <form name="form1" class="form-horizontal" ng-controller="StatController as ctrl" ng-init="ctrl.init()"> 
 
 <div >     
 <div class="container">
-    vote result
+<canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels">
+</canvas>
 </div>
 </div>  
 </form>
